# rust-book

./: README.md
basic/: .gitignore  Cargo.toml
basic/src/: main.rs
fundamentals/: datatypes  datatypes.rs
fundamentals/comments/: comments.md  comments.rs
fundamentals/conditional statements/: if  if.rs
game1/: Cargo.toml
game1/src/: main.rs
rust1/: Cargo.toml  lines.txt
rust1/src/: main.rs
rust1/src/restaurant/: mod.rs
rust2/: Cargo.toml  README.md
rust2/src/: error.rs  main.rs
rust2/src/public/: index.html
rust2/src/web/: routes_login.rs
rust2/tests/: quick_dev.rs
